--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-    background: #303030;
-    color: white;
+    padding: 10px;
+    /*background: #303030;*/
+    /*color: white;*/
 }
